added a bit about modular refinement in case we can't use their designs

--- a/docs/March_14/pre_proposal.tex
+++ b/docs/March_14/pre_proposal.tex
@@ -18,7 +18,7 @@
 		\item 2005:~\url{http://csg.csail.mit.edu/6.884/projects/group4-report.pdf}
 		\item 2005:~\url{http://csg.csail.mit.edu/6.884/projects/group2-report.pdf}
 		\item 2007:~\url{http://csg.csail.mit.edu/6.375/6_375_2007_www/projects/group4_final_report.pdf}
-	\end{itemize}}. By starting from an existing project, we will bypass some of the difficulty in verifying and debugging the correctness of an out-of-order execution implementation. 
+	\end{itemize}}. By starting from an existing project, we will bypass some of the difficulty in verifying and debugging the correctness of an out-of-order execution implementation. Alternatively, we are could implement Tomasulo's algorithm using modular refinement, testing each of the primary components (reorder buffer and reserveration stations) in isolation, and extending the tracing framework provided during labs 5 and 6 to help us explore the nondeterministic data flows inherent in the out of order design.
 	
 	Second, we could use high-level abstraction within Bluespec to extend an SMIPS Tomasulo algorithm to a generalized register load-store ISA. The notion here is to preserve the branch instruction and storage processing components of our existing SMIPS architecture, and dynamically generate the execution architecture at Bluespec's compile-time. There is some precedent in this idea within flexible instruction set simulators, which use generic instruction models to target many variations of architectures with complex instruction sets\footnote{For example:~\url{http://portal.acm.org/ft_gateway.cfm?id=1151083&type=pdf}.}. To develop this retargetable ISA processor, we will have to find a reference model that both performs well and is efficient in describing architectures and their instruction sets, and incorporate that abstraction into the instruction fetch stage. The remainder of this project will be an exploration of Bluespec's capabilities in generic decoding and dispatching on differing instruction sets.
 	
