fixed presentation commit

--- a/docs/March_16/presentation.tex
+++ b/docs/March_16/presentation.tex
@@ -141,32 +141,20 @@
 
 \LogoOff
 
-% Structuring a talk is a difficult task and the following structure
-% may not be suitable. Here are some rules that apply for this
-% solution: 
-
-% - Exactly two or three sections (other than the summary).
-% - At *most* three subsections per section.
-% - Talk about 30s to 2min per frame. So there should be between about
-%   15 and 30 frames, all told.
-
-% - A conference audience is likely to know very little of what you
-%   are going to talk about. So *simplify*!
-% - In a 20min talk, getting the main ideas across is hard
-%   enough. Leave out details, even if it means being less precise than
-%   you think necessary.
-% - If you omit details that are vital to the proof/implementation,
-%   just say so once. Everybody will be happy with that.
-
-
 \begin{frame}{Tomasulo with Speculation}
 	\begin{center}
 		\includegraphics[width=0.65\textwidth]{tomasulo.pdf}
 	\end{center}
 \end{frame}
 
-\section{End Matter}
-\begin{frame}
+\begin{frame}{Another idea: Retargetable ISA with register load-store architecture}
+	\begin{itemize}
+		\item Generalize instruction translation and dispatch
+		\item Exploration of higher-level instruction abstractions within Bluespec
+		\item Replace execution rule with multiple modules (e.g., floating point, vector ops)
+		\item Investigation tradeoffs between abstraction and hardware performance
+		\item Precedent with microcode and ISA simulators
+	\end{itemize}
 
 \end{frame}
 
