minor English changes to proposal

--- a/docs/March_30/proposal.tex
+++ b/docs/March_30/proposal.tex
@@ -137,7 +137,7 @@ labs.
 
 We will use the existing SMIPS implementation and toolchain to provide inputs, gather 
 outputs, log rule executions as traces, and benchmark our implementation. Verifying the 
-correctness of the Tomasulo's algorithm implementation will first require modular refinment
+correctness of the Tomasulo's algorithm implementation will first require modular refinement
 of fundamental components, such as the reorder buffer and reservation stations, before 
 they are incorporated into our existing SMIPS implementation. To verify functional 
 correctness in instruction execution, we will unit test with short programs that 
