added design exploration items

--- a/docs/April_06/microarchitecture.tex
+++ b/docs/April_06/microarchitecture.tex
@@ -378,9 +378,18 @@ datatypes are described in greater detail in the next section.
 
 \end{enumerate}
 
-    \section{Implementation Status}
-    
+    \section{Implementation Status and Testing Plans}
+
     \section{Planned Design Exploration}
+    
+    We will explore architectural parametrization: 
+    \begin{enumerate}
+        \item Reorder buffer dimension
+        \item Branch prediction strategies (BTB and 2-Bit)
+        \item Register file bypassing and FIFO usage
+        \item Multiple ALU instruction issue
+        \item Artificial arithmetic and memory latency
+    \end{enumerate}
     
     \section{Citations}
     
