--- a/docs/April_06/microarchitecture.tex
+++ b/docs/April_06/microarchitecture.tex
@@ -382,7 +382,7 @@ datatypes are described in greater detail in the next section.
 
     \section{Planned Design Exploration}
     
-    We will explore architectural parametrization: 
+    Our first goal is to obtain functional out-of-order execution with speculation, and then improve IPC performance by optimizing rule/pipeline concurrency and FIFO choices (as in Lab 6). We will explore architectural parametrization and design choices on the IPC and timing critical path:    
     \begin{enumerate}
         \item Reorder buffer dimension
         \item Branch prediction strategies (BTB and 2-Bit)
